# system-design-labs

./: .gitignore  astro.config.mjs  build-your-own-labs-plan.md  package-lock.json  package.json
labs/agent-framework/: bench-results.json  pyproject.toml
labs/agent-framework/java-integration/: pom.xml
labs/agent-framework/src/: agent.py  server.py  tools.py  v0_react.py  v1_function_call.py  v2_async.py
labs/agent-framework/tests/: test_agent.py
labs/btree-kv/: Cargo.toml  bench-results.json
labs/btree-kv/benches/: btree_bench.rs
labs/btree-kv/examples/: demo.rs
labs/btree-kv/java-integration/: pom.xml
labs/btree-kv/src/: lib.rs  main.rs  v0.rs  v1.rs  v2.rs
labs/bytecode-vm/: Cargo.toml  bench-results.json
labs/bytecode-vm/benches/: vm_bench.rs
labs/bytecode-vm/examples/: demo.rs
labs/bytecode-vm/java-integration/: pom.xml
labs/bytecode-vm/src/: lib.rs  main.rs  v0.rs  v1.rs  v2.rs
labs/columnar-storage/: Cargo.toml  bench-results.json
labs/columnar-storage/benches/: columnar_bench.rs
labs/columnar-storage/java-integration/: pom.xml
labs/columnar-storage/src/: column.rs  encoding.rs  file.rs  lib.rs  main.rs  rowgroup.rs
labs/document-db/: Cargo.toml  bench-results.json
labs/document-db/benches/: docdb_bench.rs
labs/document-db/examples/: demo.rs
labs/document-db/java-integration/: pom.xml
labs/document-db/src/: lib.rs  main.rs  v0.rs  v1.rs  v2.rs
labs/embedding-pipeline/: bench-results.json  pyproject.toml
labs/embedding-pipeline/java-integration/: pom.xml
labs/embedding-pipeline/src/: __init__.py  pipeline.py  server.py  v0_single.py  v1_batched.py  v2_versioned.py
labs/embedding-pipeline/tests/: test_embedding.py
labs/garbage-collector/: Cargo.toml  bench-results.json
labs/garbage-collector/benches/: gc_bench.rs
labs/garbage-collector/java-integration/: pom.xml
labs/garbage-collector/src/: lib.rs  main.rs  v0.rs  v1.rs  v2.rs
labs/kv-cache/: Cargo.toml  bench-results.json
labs/kv-cache/benches/: cache_bench.rs
labs/kv-cache/examples/: demo.rs
labs/kv-cache/java-integration/: pom.xml
labs/kv-cache/src/: lib.rs  v0.rs  v1.rs  v2.rs
labs/llm-eval/: bench-results.json  pyproject.toml
labs/llm-eval/java-integration/: pom.xml
labs/llm-eval/src/: __init__.py  harness.py  server.py  tasks.py  v0_fewshot.py  v1_logprob.py  v2_contamination.py
labs/llm-eval/tests/: test_eval.py
labs/llm-inference/: bench-results.json  pyproject.toml
labs/llm-inference/java-integration/: pom.xml
labs/llm-inference/src/: __init__.py  engine.py  server.py  v0_naive.py  v1_kv_cache.py  v2_batched.py
labs/llm-inference/tests/: test_inference.py
labs/lora-finetune/: bench-results.json  pyproject.toml
labs/lora-finetune/java-integration/: pom.xml
labs/lora-finetune/src/: __init__.py  dataset.py  server.py  v0_lora_math.py  v1_training.py  v2_serving.py
labs/lora-finetune/tests/: test_lora.py
labs/lsm-kv/: Cargo.toml  bench-results.json
labs/lsm-kv/benches/: lsm_bench.rs
labs/lsm-kv/examples/: demo.rs
labs/lsm-kv/java-integration/: pom.xml
labs/lsm-kv/src/: lib.rs  main.rs  v0.rs  v1.rs  v2.rs
labs/mcp-server/: bench-results.json  pyproject.toml
labs/mcp-server/java-integration/: pom.xml
labs/mcp-server/src/: __init__.py  example_server.py  protocol.py  server.py  v0_stdio.py  v1_http.py  v2_advanced.py
labs/mcp-server/tests/: test_mcp.py
labs/mini-sql-db/: Cargo.toml  bench-results.json
labs/mini-sql-db/benches/: sql_bench.rs
labs/mini-sql-db/java-integration/: pom.xml
labs/mini-sql-db/src/: ast.rs  db.rs  executor.rs  index.rs  lexer.rs  lib.rs  main.rs  operator.rs  parser.rs  planner.rs  wal.rs
labs/mini-sql-db/tests/: integration.rs
labs/model-quantizer/: bench-results.json  pyproject.toml
labs/model-quantizer/java-integration/: pom.xml
labs/model-quantizer/src/: __init__.py  gguf_lite.py  server.py  v0_int8.py  v1_int4.py  v2_quality.py
labs/model-quantizer/tests/: test_quantizer.py
labs/prompt-optimization/: bench-results.json  pyproject.toml
labs/prompt-optimization/java-integration/: pom.xml
labs/prompt-optimization/src/: evaluate.py  server.py  v0_signature.py  v1_bootstrap.py  v2_teleprompter.py
labs/prompt-optimization/tests/: test_prompt_opt.py
labs/property-graph-db/: Cargo.toml  bench-results.json
labs/property-graph-db/benches/: graph_bench.rs
labs/property-graph-db/java-integration/: pom.xml
labs/property-graph-db/src/: executor.rs  graph.rs  index.rs  lib.rs  main.rs  path.rs  query.rs
labs/rag/: bench-results.json  pyproject.toml
labs/rag/data/: sample_docs.txt
labs/rag/java-integration/: pom.xml
labs/rag/src/: __init__.py  eval.py  server.py  v0_naive.py  v1_hybrid.py  v2_rerank.py
labs/rag/tests/: test_rag.py
labs/regex-engine/: Cargo.toml  bench-results.json
labs/regex-engine/benches/: regex_bench.rs
labs/regex-engine/examples/: demo.rs
labs/regex-engine/java-integration/: pom.xml
labs/regex-engine/src/: lib.rs  main.rs  v0.rs  v1.rs  v2.rs
labs/speculative-decoding/: bench-results.json  pyproject.toml
labs/speculative-decoding/java-integration/: pom.xml
labs/speculative-decoding/src/: __init__.py  models.py  server.py  v0_basic.py  v1_batched.py  v2_tree.py
labs/speculative-decoding/tests/: test_speculative.py
labs/timeseries-db/: Cargo.toml  bench-results.json
labs/timeseries-db/benches/: tsdb_bench.rs
labs/timeseries-db/examples/: demo.rs
labs/timeseries-db/java-integration/: pom.xml
labs/timeseries-db/src/: lib.rs  main.rs  v0.rs  v1.rs  v2.rs
labs/tokenizer/: bench-results.json  pyproject.toml
labs/tokenizer/java-integration/: pom.xml
labs/tokenizer/src/: __init__.py  server.py  train.py  v0_char.py  v1_bpe.py  v2_gpt2bpe.py
labs/tokenizer/tests/: test_tokenizer.py
labs/transformer/: bench-results.json  pyproject.toml
labs/transformer/java-integration/: pom.xml
labs/transformer/src/: __init__.py  server.py  train.py  v0_attention.py  v1_transformer_block.py  v2_gpt.py
labs/vector-index/: Cargo.toml  bench-results.json
labs/wal/: Cargo.toml  bench-results.json
labs/wal/examples/: demo.rs
(+782 files in other folders)
