[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-framework"
version = "0.1.0"
description = "Build Your Own Agent Framework — ReAct loop, JSON function calling with cost guards, parallel sandboxed execution"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
