[package]
name = "btree-kv"
version = "0.1.0"
edition = "2021"
description = "B+Tree KV Store — staged implementation (v0–v2)"

[[bin]]
name = "btree-server"
path = "src/main.rs"

[lib]
name = "btree_kv"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
# HTTP server
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Checksum for WAL records (v2)
crc32fast  = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
tempfile   = "3"

[[bench]]
name    = "btree_bench"
harness = false
