[package]
name = "bytecode-vm"
version = "0.1.0"
edition = "2021"
description = "Bytecode VM — staged implementation (v0: stack machine, v1: closures, v2: tail call optimization)"

[[bin]]
name = "bytecode-vm"
path = "src/main.rs"

[lib]
name = "bytecode_vm"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
# No external runtime deps — pure Rust

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vm_bench"
harness = false
