[package]
name = "columnar-storage"
version = "0.1.0"
edition = "2021"
description = "Columnar Storage (Parquet-lite) — staged implementation (v0–v2)"

[[bin]]
name = "columnar-demo"
path = "src/main.rs"

[lib]
name = "columnar_storage"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "columnar_bench"
harness = false
