[package]
name = "document-db"
version = "0.1.0"
edition = "2021"
description = "Document Database — staged implementation (v0–v2)"

[[bin]]
name = "docdb-server"
path = "src/main.rs"

[lib]
name = "document_db"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
# HTTP server
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID generation for document IDs
uuid       = { version = "1", features = ["v4"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
tempfile   = "3"

[[bench]]
name    = "docdb_bench"
harness = false
