[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embedding-pipeline"
version = "0.1.0"
description = "Build Your Own Embedding Pipeline — single-model serving, dynamic batching with LRU cache, model versioning with drift detection"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
