[package]
name = "garbage-collector"
version = "0.1.0"
edition = "2021"
description = "Garbage Collector — staged implementation (v0: mark-sweep, v1: generational, v2: tri-color incremental)"

[[bin]]
name = "garbage-collector"
path = "src/main.rs"

[lib]
name = "garbage_collector"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gc_bench"
harness = false
