[package]
name = "kv-cache"
version = "0.1.0"
edition = "2021"
description = "In-Memory Cache (Redis-lite) — staged implementation (v0–v2)"

[lib]
name = "kv_cache"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
# Async runtime for the TCP server (v1+)
tokio      = { version = "1", features = ["full"] }

# Serialization for AOF persistence (v2)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# CRC32 for AOF record integrity (v2)
crc32fast  = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio     = { version = "1", features = ["full"] }

[[bench]]
name    = "cache_bench"
harness = false
