[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval"
version = "0.1.0"
description = "Build Your Own LLM Evaluation Harness — few-shot exact match, log-likelihood scoring, contamination detection, bootstrap confidence intervals"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
