[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lora-finetune"
version = "0.1.0"
description = "Build Your Own LoRA Fine-Tuning Pipeline — from low-rank math to instruction training to adapter serving with merge"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that require downloading GPT-2 (~500 MB)",
]
