[package]
name = "lsm-kv"
version = "0.1.0"
edition = "2021"
description = "LSM-Tree KV Store — staged implementation (v0–v2)"

[[bin]]
name = "lsm-server"
path = "src/main.rs"

[lib]
name = "lsm_kv"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
# HTTP server
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
tempfile   = "3"

[[bench]]
name    = "lsm_bench"
harness = false
