[package]
name = "mini-sql-db"
version = "0.1.0"
edition = "2021"
description = "Mini SQL database engine — tokenizer, parser, volcano model, B-Tree index, WAL"

[[bin]]
name = "mini-sql-db"
path = "src/main.rs"

[lib]
name = "mini_sql_db"
path = "src/lib.rs"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sql_bench"
harness = false
