[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-quantizer"
version = "0.1.0"
description = "Model quantizer from INT8 symmetric to INT4 grouped quantization with GGUF format and perplexity-based quality measurement"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
