[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-optimization"
version = "0.1.0"
description = "Build Your Own Prompt Optimization Framework — signatures, bootstrapped few-shot, teleprompter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
