[package]
name = "property-graph-db"
version = "0.1.0"
edition = "2021"
description = "Property Graph Database — staged implementation (v0–v2)"

[lib]
name = "property_graph_db"
path = "src/lib.rs"

[[bin]]
name = "graph-demo"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_bench"
harness = false
