[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-system"
version = "0.1.0"
description = "Build Your Own RAG System — naive dense retrieval, BM25 hybrid with RRF, and cross-encoder reranking"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "requests>=2.32",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
