[package]
name = "regex-engine"
version = "0.1.0"
edition = "2021"
description = "Regex Engine — Thompson NFA to DFA, staged implementation (v0–v2)"

[[bin]]
name = "regex-repl"
path = "src/main.rs"

[lib]
name = "regex_engine"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
# No runtime dependencies — pure Rust stdlib only

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "regex_bench"
harness = false
