[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speculative-decoding"
version = "0.1.0"
description = "Build Your Own Speculative Decoding — draft-then-verify, batched speedup, tree attention, and self-speculative decoding"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
