[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpe-tokenizer"
version = "0.1.0"
description = "BPE tokenizer from scratch — character-level baseline to GPT-2 style byte-level BPE"
requires-python = ">=3.12"
dependencies = [
    "regex>=2024.4",
    "tqdm>=4.66",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
