[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "GPT-style transformer from scratch in PyTorch — trained on TinyShakespeare"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "requests>=2.32",  # used in train.py to download TinyShakespeare
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # pytest client for FastAPI
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
