[package]
name = "vector-index"
version = "0.1.0"
edition = "2021"
description = "Vector Index (HNSW + IVF-PQ) — staged implementation (v0–v2)"

[[bin]]
name = "vector-demo"
path = "src/main.rs"

[lib]
name = "vector_index"
path = "src/lib.rs"

[dependencies]
# HTTP server for Java integration endpoint
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "index_bench"
harness = false
