[package]
name = "wal"
version = "0.1.0"
edition = "2021"
description = "Write-Ahead Log — staged implementation (v0–v3)"

[[bin]]
name = "wal-server"
path = "src/main.rs"

[lib]
name = "wal"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
# HTTP server (v1+ server mode)
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Checksum for record integrity
crc32fast  = "1"

# Encoding
base64     = "0.22"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
tempfile   = "3"

[[bench]]
name    = "wal_bench"
harness = false
